--- a/src/app/formly-form-core/display-types/page-form/page-form.component.scss
+++ b/src/app/formly-form-core/display-types/page-form/page-form.component.scss
@@ -15,7 +15,7 @@
   flex: 1;
 }
 
-:host ::ng-deep .mat-tab-group > .mat-tab-header {
+:host ::ng-deep .page-form-mat-tab-group > .mat-tab-header {
   display: none;
 }
 
