--- a/src/app/formly-form-core/modal/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/formly-form-core/modal/confirmation-modal/confirmation-modal.component.html
@@ -5,7 +5,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions class="flex">
-  <div class="margin-left-auto flex row">
+  <div class="flex-row align-end ">
     <div class="margin-right">
       <button type="button" *ngIf="!!modalData.secondaryActionText" mat-button [mat-dialog-close]="modalData.secondaryActionText">
         {{ modalData.secondaryActionText }}
