--- a/src/app/formly-form-json-schema-builder/components/options-editor/options-editor.component.scss
+++ b/src/app/formly-form-json-schema-builder/components/options-editor/options-editor.component.scss
@@ -9,10 +9,14 @@
 }
 
 .top-buttons {
-  font-weight: bold;
   display: flex;
-  margin-left: auto;
-  margin-top: 0.5em;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  button:not(:last-child) {
+    margin-right: 2em;
+  }
 }
 
 .mat-column-select {
