--- a/src/app/formly-form-core/display-types/tab-form/tab-form.component.scss
+++ b/src/app/formly-form-core/display-types/tab-form/tab-form.component.scss
@@ -30,6 +30,20 @@
     display: flex;
     flex-direction: row;
     margin: 1em 0 0 auto;
+
+    button:not(:first-child) {
+      margin-left: 1em;
+    }
+  }
+}
+
+.mat-tab-label-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  mat-icon {
+    margin-right: 0.25em;
   }
 }
 
