--- a/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.scss
+++ b/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.scss
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+  box-sizing: border-box;
+}
 
 :host ::ng-deep .mat-expansion-panel-content {
   @media screen and (max-width: 960px) {
@@ -9,6 +13,21 @@
   @media screen and (max-width: 960px) {
     padding: 0;
   }
+}
+
+.top-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  button:not(:last-child) {
+    margin-right: 2em;
+  }
+}
+
+.custom-expansion-panel:not(:last-child) {
+  margin-bottom: 0.25em !important;
 }
 
 .header-contents,
@@ -24,8 +43,7 @@
 .form-pages {
   display: flex;
   flex-direction: column;
-  flex: 1;
-  padding-bottom: 1.5em;
+  padding-top: 1em;
 }
 
 .page-summary {
@@ -71,15 +89,4 @@
 
 .remove-disable-shading {
   color: black;
-}
-
-.top-buttons {
-  font-weight: bold;
-  display: flex;
-  margin-left: auto;
-  margin-top: 0.5em;
-}
-
-.custom-expansion-panel:not(:last-child) {
-  margin-bottom: 0.25em !important;
 }
