--- a/src/app/formly-form-json-schema-builder/components/page-fields/page-fields.component.scss
+++ b/src/app/formly-form-json-schema-builder/components/page-fields/page-fields.component.scss
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+  box-sizing: border-box;
+}
 
 .page-fields {
   display: flex;
@@ -7,9 +11,14 @@
 }
 
 .top-buttons {
-  font-weight: bold;
   display: flex;
-  margin-left: auto;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  button:not(:last-child) {
+    margin-right: 2em;
+  }
 }
 
 .svg-icon {
