--- a/src/app/formly-form-json-schema-builder/components/page-fields/page-fields.component.html
+++ b/src/app/formly-form-json-schema-builder/components/page-fields/page-fields.component.html
@@ -1,5 +1,5 @@
 <div class="top-buttons center-content" [style.margin-left]="'auto'">
-  <button mat-flat-button color="primary" (click)="add()" [disabled]="reorderEnabled" extended>
+  <button mat-flat-button (click)="add()" [disabled]="reorderEnabled" extended>
     <mat-icon>add</mat-icon>
     Add Field
   </button>
