--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,15 @@
 @use '@angular/material' as mat;
-@import '@angular/material/_theming';
 @include mat.core();
 
 $fonts: Roboto, sans-serif;
-$app-primary: mat.define-palette(mat.$indigo-palette, 800, 400, 900);
-$app-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
-$app-warn: mat.define-palette(mat.$red-palette, 900);
-$app-typography: mat.define-typography-config(
+$app-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 800, 400, 900);
+$app-accent: mat.m2-define-palette(mat.$m2-amber-palette, A200, A100, A400);
+$app-warn: mat.m2-define-palette(mat.$m2-red-palette, 900);
+$app-typography: mat.m2-define-typography-config(
   $font-family: $fonts
 );
 
-$app-theme: mat.define-light-theme((
+$app-theme: mat.m2-define-light-theme((
   color: (
     primary: $app-primary,
     accent: $app-accent,
